@@ -10,6 +10,10 @@
 	* src/client/exmpp_client_tls.erl, src/server/exmpp_server_tls.erl:
 	New modules to deal with TLS negotiation.
 
+	* src/client/exmpp_client_compression.erl,
+	src/server/exmpp_server_compression.erl: New modules to deal with
+	stream compression negotiation.
+
 2007-04-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_factory.erl, src/core/exmpp_stream.erl,
